--- a/toDoList.html
+++ b/toDoList.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>To Do List</title>
+  <link rel="stylesheet" type="text/css" href="./toDoList.css" />
 </head>
+
 <body>
   <div class="todolist">
     <div class="todolist-header">
-      <h1>TO Do List</h1>
-      <h3>Simple Todo List with adding abd filter by diff status.</h3>
+      <h2>To Do List</h2>
+      <p>Simple Todo List with adding abd filter by diff status.</p>
       <form action="GET">
-        <input type="text">
-        <button class="add">Add</button>
+        <input type="text" name="new-task">
+        <button class="addBtn">Add</button>
       </form>
     </div>
     <div class="todolist-body"></div>
     <div class="todolist-footer">
-      <button class="all">All</button>
-      <button class="active">Active</button>
-      <button class="complete">Complete</button>
+      <button class="allBtn">All</button>
+      <button class="activeBtn">Active</button>
+      <button class="completeBtn">Complete</button>
     </div>
   </div>
 </body>
+
 </html>
