[Jiachen] refactor-1: set class selector for to do list input

--- a/toDoList.html
+++ b/toDoList.html
@@ -15,16 +15,16 @@
       <h2>To Do List</h2>
       <p>Simple Todo List with adding abd filter by diff status.</p>
       <form action="GET">
-        <input type="text" name="new-task">
-        <button name="add-btn" class="header-btn">Add</button>
+        <input name="new-task" type="text" class="new-task">
+        <button name="add-btn" class="header-btn add-btn">Add</button>
       </form>
     </div>
     <div class="todolist-body"></div>
     <div class="todolist-footer">
       <form action="GET">
-        <button name="all-btn" class="footer-btn">All</button>
-        <button name="active-btn" class="footer-btn">Active</button>
-        <button name="complete-btn" class="footer-btn">Complete</button>
+        <button name="all-btn" class="footer-btn all-btn">All</button>
+        <button name="active-btn" class="footer-btn active-btn">Active</button>
+        <button name="complete-btn" class="footer-btn complete-btn">Complete</button>
       </form>
     </div>
   </div>
