[Jiachen] refactor-1: change ordered list into unodered list, adding list number manually

--- a/toDoList.html
+++ b/toDoList.html
@@ -20,15 +20,13 @@
 
     </div>
     <div class="todolist-body">
-      <ol class="list-of-todo">
-      </ol>
+      <ul class="list-of-todo">
+      </ul>
     </div>
     <div class="todolist-footer">
-        <button name="all-btn" class="footer-btn all-btn">All</button>
-        <button name="active-btn" class="footer-btn active-btn"
-          onmousedown="getAddPermission(event)">Active</button>
-        <button name="complete-btn" class="footer-btn complete-btn"
-          onmousedown="getAddPermission(event)">Complete</button>
+      <button name="all-btn" class="footer-btn all-btn">All</button>
+      <button name="active-btn" class="footer-btn active-btn">Active</button>
+      <button name="complete-btn" class="footer-btn complete-btn">Complete</button>
     </div>
   </div>
 </body>
