[Jiachen] feat-4: click 'ALL' button to show all tasks

--- a/toDoList.html
+++ b/toDoList.html
@@ -22,7 +22,7 @@
       </ul>
     </div>
     <div class="todolist-footer">
-      <button name="all-btn" class="footer-btn all-btn">All</button>
+      <button name="all-btn" class="footer-btn all-btn" onmousedown="showAllTasks()">All</button>
       <button name="active-btn" class="footer-btn active-btn">Active</button>
       <button name="complete-btn" class="footer-btn complete-btn">Complete</button>
     </div>
