--- a/toDoList.html
+++ b/toDoList.html
@@ -23,7 +23,7 @@
     </div>
     <div class="todolist-footer">
       <button name="all-btn" class="footer-btn all-btn" onmousedown="showAllTasks()">All</button>
-      <button name="active-btn" class="footer-btn active-btn">Active</button>
+      <button name="active-btn" class="footer-btn active-btn" onmousedown="showActiveTasks()">Active</button>
       <button name="complete-btn" class="footer-btn complete-btn">Complete</button>
     </div>
   </div>
