[Jiachen] feat-4: click 'Complete' to show completed tasks

--- a/toDoList.html
+++ b/toDoList.html
@@ -24,7 +24,7 @@
     <div class="todolist-footer">
       <button name="all-btn" class="footer-btn all-btn" onmousedown="showAllTasks()">All</button>
       <button name="active-btn" class="footer-btn active-btn" onmousedown="showActiveTasks()">Active</button>
-      <button name="complete-btn" class="footer-btn complete-btn">Complete</button>
+      <button name="complete-btn" class="footer-btn complete-btn" onmousedown="showCompletedTasks()">Complete</button>
     </div>
   </div>
 </body>
