--- a/toDoList.html
+++ b/toDoList.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>To Do List</title>
-  <link rel="stylesheet" type="text/css" href="./toDoList.css" />
+  <link rel="stylesheet" type="text/css" href="./styles/toDoList.css" />
+  <link rel="stylesheet" type="text/css" href="./styles/iconfont.css">
 </head>
 
 <body>
